--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -25,7 +25,7 @@
           </div>
             <h5 class="about_kid">Illness: <%= @kid.illness %></h5>
         </div>
-      <h5><%= @kid.child_descript %>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus semper dignissim interdum. Praesent convallis, dui at volutpat viverra, sapien odio pellentesque sapien, nec tempus sapien lacus quis purus. Maecenas vitae quam nunc, at congue tortor. Aliquam sit amet dignissim lacus. Morbi sit amet nibh diam, ac consequat lorem. Praesent pulvinar urna et felis venenatis iaculis. Donec vitae vulputate est.</h5>
+      <h5><%= @kid.child_descript %></h5>
       <h5>Check out <%= @kid.first_name %>'s <a href="#wish_list">Wish Lists</a>.</h5>
     </div> <!-- .five columns -->
 </div> <!-- .row .bottom_border -->
