--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -26,4 +26,7 @@
     <%= f.submit "Submit", :class => "medium button parent_account" %> 
   </div><!-- two columns -->
   <% end %>
+  <div class= "twelve columns">
+  <h4>Already have an account? Sign in <%= link_to 'here', '/login' %>.</h4>
+  </div>
 </div><!-- end of .row -->
