--- a/app/views/purchases/thanks.html.erb
+++ b/app/views/purchases/thanks.html.erb
@@ -1,3 +1,8 @@
 <h1> Thanks for helping! </h1>
 
-<%= link_to "Go to my dashboard", root_path %>
+
+<h3>Share this purchase with your friends!</h3>
+
+<h6>Facebook: "I donated a wish today!"</h6>
+
+<h6>Twitter: "I donated a wish today!"</h6>
