--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -220,6 +220,10 @@ table thead tr th {
   border-radius: 3px;
 }
 
+.kid_index:last-child {
+  float: left !important;
+}
+
 /* ----------------- Form Layout ----------------*/
 #list_title {
   width: 300px;
