home page change

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h3 id="slogan">Welcome to Donate A Wish... Where you can change the world!</h3>
+<h3 id="slogan">Welcome to Donate A Wish... Where you can change a life right now!</h3>
   <div class="row">
     <div class="twelve columns home_pg_img">
       <div id="featured">
